--- a/starter/03-CSS-Fundamentals/product.html
+++ b/starter/03-CSS-Fundamentals/product.html
@@ -20,7 +20,7 @@
 
       <p class="price"><strong>$65.00</strong></p>
       <p class="shipping">Free shipping</p>
-      <p>
+      <p class="description">
         Ready to dress up or down, these classic canvas Chucks are en everyday
         wardrobe staple.
       </p>
