--- a/starter/03-CSS-Fundamentals/product.html
+++ b/starter/03-CSS-Fundamentals/product.html
@@ -27,6 +27,14 @@
       <a class="more-info" href="https://www.converse.com/uk"
         >More information &rarr;</a
       >
+      <div>
+        <div class="black-color"></div>
+        <div class="blue-color"></div>
+        <div class="orange-color"></div>
+        <div class="yellow-color"></div>
+        <div class="green-color"></div>
+        <div class="brown-color"></div>
+      </div>
       <h3 class="details-title">Product details</h3>
       <ul class="details-list">
         <li>Lightweight, durable canvas sneaker</li>
@@ -34,6 +42,7 @@
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
       <button class="add-cart">Add to cart</button>
+      <p class="sale-label">sale</p>
     </article>
   </body>
 </html>
