update code based on solution given

--- a/starter/03-CSS-Fundamentals/product.html
+++ b/starter/03-CSS-Fundamentals/product.html
@@ -20,6 +20,7 @@
 
       <p class="price"><strong>$65.00</strong></p>
       <p class="shipping">Free shipping</p>
+      <p class="sale-label">sale</p>
       <p class="description">
         Ready to dress up or down, these classic canvas Chucks are en everyday
         wardrobe staple.
@@ -27,13 +28,13 @@
       <a class="more-info" href="https://www.converse.com/uk"
         >More information &rarr;</a
       >
-      <div>
-        <div class="black-color"></div>
-        <div class="blue-color"></div>
-        <div class="orange-color"></div>
-        <div class="yellow-color"></div>
-        <div class="green-color"></div>
-        <div class="brown-color"></div>
+      <div class="colors">
+        <div class="color black-color"></div>
+        <div class="color blue-color"></div>
+        <div class="color orange-color"></div>
+        <div class="color yellow-color"></div>
+        <div class="color green-color"></div>
+        <div class="color brown-color"></div>
       </div>
       <h3 class="details-title">Product details</h3>
       <ul class="details-list">
@@ -42,7 +43,6 @@
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
       <button class="add-cart">Add to cart</button>
-      <p class="sale-label">sale</p>
     </article>
   </body>
 </html>
