--- a/starter/04-CSS-Layouts/product.html
+++ b/starter/04-CSS-Layouts/product.html
@@ -9,37 +9,47 @@
   <body>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-      <img
-        src="img/challenges.jpg"
-        alt="close up of ladies legs and feet wearing the black converse, stood on dry leaves"
-        width="250"
-        height="250"
-      />
+      <div class="container">
+        <img
+          src="img/challenges.jpg"
+          alt="close up of ladies legs and feet wearing the black converse, stood on dry leaves"
+          width="250"
+          height="250"
+          class="product-img"
+        />
 
-      <p class="price"><strong>$65.00</strong></p>
-      <p class="shipping">Free shipping</p>
-      <p class="sale-label">sale</p>
-      <p class="description">
-        Ready to dress up or down, these classic canvas Chucks are en everyday
-        wardrobe staple.
-      </p>
-      <a class="more-info" href="https://www.converse.com/uk"
-        >More information &rarr;</a
-      >
-      <div class="colors">
-        <div class="color black-color"></div>
-        <div class="color blue-color"></div>
-        <div class="color orange-color"></div>
-        <div class="color yellow-color"></div>
-        <div class="color green-color"></div>
-        <div class="color brown-color"></div>
+        <div class="description-container">
+          <div class="description-header">
+            <p class="price"><strong>$65.00</strong></p>
+            <p class="shipping">Free shipping</p>
+          </div>
+          <div class="description-body"></div>
+          <p class="sale-label">sale</p>
+          <p class="description">
+            Ready to dress up or down, these classic canvas Chucks are en
+            everyday wardrobe staple.
+          </p>
+          <a class="more-info" href="https://www.converse.com/uk"
+            >More information &rarr;</a
+          >
+          <div class="colors">
+            <div class="color black-color"></div>
+            <div class="color blue-color"></div>
+            <div class="color orange-color"></div>
+            <div class="color yellow-color"></div>
+            <div class="color green-color"></div>
+            <div class="color brown-color"></div>
+          </div>
+        </div>
+        <div class="details-container">
+          <h3 class="details-title">Product details</h3>
+          <ul class="details-list">
+            <li>Lightweight, durable canvas sneaker</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch</li>
+          </ul>
+        </div>
       </div>
-      <h3 class="details-title">Product details</h3>
-      <ul class="details-list">
-        <li>Lightweight, durable canvas sneaker</li>
-        <li>Lightly padded footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch</li>
-      </ul>
       <button class="add-cart">Add to cart</button>
     </article>
   </body>
