--- a/starter/04-CSS-Layouts/product.html
+++ b/starter/04-CSS-Layouts/product.html
@@ -23,22 +23,23 @@
             <p class="price"><strong>$65.00</strong></p>
             <p class="shipping">Free shipping</p>
           </div>
-          <div class="description-body"></div>
-          <p class="sale-label">sale</p>
-          <p class="description">
-            Ready to dress up or down, these classic canvas Chucks are en
-            everyday wardrobe staple.
-          </p>
-          <a class="more-info" href="https://www.converse.com/uk"
-            >More information &rarr;</a
-          >
-          <div class="colors">
-            <div class="color black-color"></div>
-            <div class="color blue-color"></div>
-            <div class="color orange-color"></div>
-            <div class="color yellow-color"></div>
-            <div class="color green-color"></div>
-            <div class="color brown-color"></div>
+          <div class="description-body">
+            <p class="sale-label">sale</p>
+            <p class="description">
+              Ready to dress up or down, these classic canvas Chucks are en
+              everyday wardrobe staple.
+            </p>
+            <a class="more-info" href="https://www.converse.com/uk"
+              >More information &rarr;</a
+            >
+            <div class="colors">
+              <div class="color black-color"></div>
+              <div class="color blue-color"></div>
+              <div class="color orange-color"></div>
+              <div class="color yellow-color"></div>
+              <div class="color green-color"></div>
+              <div class="color brown-color"></div>
+            </div>
           </div>
         </div>
         <div class="details-container">
