--- a/starter/04-CSS-Layouts/product.html
+++ b/starter/04-CSS-Layouts/product.html
@@ -9,7 +9,7 @@
   <body>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-      <div class="container">
+      <div class="container clearfix">
         <img
           src="img/challenges.jpg"
           alt="close up of ladies legs and feet wearing the black converse, stood on dry leaves"
@@ -18,31 +18,27 @@
           class="product-img"
         />
 
-        <div class="description-container">
-          <div class="description-header">
-            <p class="price"><strong>$65.00</strong></p>
-            <p class="shipping">Free shipping</p>
-          </div>
-          <div class="description-body">
-            <p class="sale-label">sale</p>
-            <p class="description">
-              Ready to dress up or down, these classic canvas Chucks are en
-              everyday wardrobe staple.
-            </p>
-            <a class="more-info" href="https://www.converse.com/uk"
-              >More information &rarr;</a
-            >
-            <div class="colors">
-              <div class="color black-color"></div>
-              <div class="color blue-color"></div>
-              <div class="color orange-color"></div>
-              <div class="color yellow-color"></div>
-              <div class="color green-color"></div>
-              <div class="color brown-color"></div>
-            </div>
+        <div class="product-info">
+          <p class="price"><strong>$65.00</strong></p>
+          <p class="shipping">Free shipping</p>
+          <p class="sale-label">sale</p>
+          <p class="description">
+            Ready to dress up or down, these classic canvas Chucks are en
+            everyday wardrobe staple.
+          </p>
+          <a class="more-info" href="https://www.converse.com/uk"
+            >More information &rarr;</a
+          >
+          <div class="colors">
+            <div class="color black-color"></div>
+            <div class="color blue-color"></div>
+            <div class="color orange-color"></div>
+            <div class="color yellow-color"></div>
+            <div class="color green-color"></div>
+            <div class="color brown-color"></div>
           </div>
         </div>
-        <div class="details-container">
+        <div class="product-details">
           <h3 class="details-title">Product details</h3>
           <ul class="details-list">
             <li>Lightweight, durable canvas sneaker</li>
