--- a/starter/04-CSS-Layouts/product.html
+++ b/starter/04-CSS-Layouts/product.html
@@ -19,8 +19,10 @@
         />
 
         <div class="product-info">
-          <p class="price"><strong>$65.00</strong></p>
-          <p class="shipping">Free shipping</p>
+          <div class="row">
+            <p class="price"><strong>$65.00</strong></p>
+            <p class="shipping">Free shipping</p>
+          </div>
           <p class="sale-label">sale</p>
           <p class="description">
             Ready to dress up or down, these classic canvas Chucks are en
