update based on challenge 2 solution and clean up css file. See previous commits for the float version of the layout

--- a/starter/04-CSS-Layouts/product.html
+++ b/starter/04-CSS-Layouts/product.html
@@ -9,7 +9,7 @@
   <body>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-      <div class="container clearfix">
+      <div class="container">
         <img
           src="img/challenges.jpg"
           alt="close up of ladies legs and feet wearing the black converse, stood on dry leaves"
@@ -19,7 +19,7 @@
         />
 
         <div class="product-info">
-          <div class="row">
+          <div class="product-price">
             <p class="price"><strong>$65.00</strong></p>
             <p class="shipping">Free shipping</p>
           </div>
@@ -31,7 +31,7 @@
           <a class="more-info" href="https://www.converse.com/uk"
             >More information &rarr;</a
           >
-          <div class="colors">
+          <div class="product-colors">
             <div class="color black-color"></div>
             <div class="color blue-color"></div>
             <div class="color orange-color"></div>
