--- a/starter/04-CSS-Layouts/css-grid.html
+++ b/starter/04-CSS-Layouts/css-grid.html
@@ -40,6 +40,45 @@
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        /* grid-template-columns: 1fr 1fr 1fr auto; */
+        /* grid-template-rows: 300px 200px; */
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        height: 600px;
+        /* gap: 30px; */
+        column-gap: 20px;
+        row-gap: 40px;
+
+        /* TEMP */
+        display: none;
+      }
+
+      .el--8 {
+        grid-column: 2 / 3;
+        /* grid-row: 1 / span 2; */
+        grid-row: 1 / 2;
+      }
+
+      /* .el--4 {
+        grid-column: 2 / -1;
+        grid-row: 3;
+      }
+
+      .el--3 {
+        grid-column: 3 / span 2;
+        grid-row: 1 / -1;
+      } */
+
+      .el--2 {
+        /* grid-column: 1 / 4; */
+        /* grid-column: 1 / span 3; */
+        grid-column: 1 / -1;
+        grid-row: 2;
+      }
+
+      .el--6 {
+        /* grid-row: 3 / 5; */
       }
 
       .container--2 {
@@ -47,12 +86,31 @@
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        /* aligning tracks inside container -
+        distribute empty space */
+        justify-content: center;
+        align-content: center;
+
+        /* aligning items inside cells -
+        moving items around inside cells */
+        align-items: end;
+        justify-items: end;
+      }
+
+      .el--3 {
+        align-self: center;
+        justify-self: center;
       }
     </style>
   </head>
