--- a/starter/04-CSS-Layouts/product.html
+++ b/starter/04-CSS-Layouts/product.html
@@ -9,46 +9,46 @@
   <body>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-      <div class="container">
-        <img
-          src="img/challenges.jpg"
-          alt="close up of ladies legs and feet wearing the black converse, stood on dry leaves"
-          width="250"
-          height="250"
-          class="product-img"
-        />
+      <!-- <div class="container"> -->
+      <img
+        src="img/challenges.jpg"
+        alt="close up of ladies legs and feet wearing the black converse, stood on dry leaves"
+        width="250"
+        height="250"
+        class="product-img"
+      />
 
-        <div class="product-info">
-          <div class="product-price">
-            <p class="price"><strong>$65.00</strong></p>
-            <p class="shipping">Free shipping</p>
-          </div>
-          <p class="sale-label">sale</p>
-          <p class="description">
-            Ready to dress up or down, these classic canvas Chucks are en
-            everyday wardrobe staple.
-          </p>
-          <a class="more-info" href="https://www.converse.com/uk"
-            >More information &rarr;</a
-          >
-          <div class="product-colors">
-            <div class="color black-color"></div>
-            <div class="color blue-color"></div>
-            <div class="color orange-color"></div>
-            <div class="color yellow-color"></div>
-            <div class="color green-color"></div>
-            <div class="color brown-color"></div>
-          </div>
+      <div class="product-info">
+        <div class="product-price">
+          <p class="price"><strong>$65.00</strong></p>
+          <p class="shipping">Free shipping</p>
         </div>
-        <div class="product-details">
-          <h3 class="details-title">Product details</h3>
-          <ul class="details-list">
-            <li>Lightweight, durable canvas sneaker</li>
-            <li>Lightly padded footbed for added comfort</li>
-            <li>Iconic Chuck Taylor ankle patch</li>
-          </ul>
+        <p class="sale-label">sale</p>
+        <p class="description">
+          Ready to dress up or down, these classic canvas Chucks are en everyday
+          wardrobe staple.
+        </p>
+        <a class="more-info" href="https://www.converse.com/uk"
+          >More information &rarr;</a
+        >
+        <div class="product-colors">
+          <div class="color black-color"></div>
+          <div class="color blue-color"></div>
+          <div class="color orange-color"></div>
+          <div class="color yellow-color"></div>
+          <div class="color green-color"></div>
+          <div class="color brown-color"></div>
         </div>
       </div>
+      <div class="product-details">
+        <h3 class="details-title">Product details</h3>
+        <ul class="details-list">
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
+      </div>
+      <!-- </div> -->
       <button class="add-cart">Add to cart</button>
     </article>
   </body>
