--- a/starter/06-Components/04-pagination.html
+++ b/starter/06-Components/04-pagination.html
@@ -41,16 +41,16 @@
         font-size: 16px;
 
         display: flex;
-        gap: 4px;
+        gap: 12px;
         align-items: center;
       }
 
       .btn {
-        background-color: white;
+        background: none;
         border: 1px solid #087f5b;
         border-radius: 50%;
-        width: 40px;
-        height: 40px;
+        width: 48px;
+        height: 48px;
         cursor: pointer;
       }
 
@@ -60,31 +60,37 @@
 
       .btn-icon {
         stroke: #087f5b;
-        width: 18px;
+        width: 24px;
+        height: 24px;
       }
 
-      .btn-icon:hover {
+      .btn:hover .btn-icon {
         stroke: white;
       }
 
-      .page-num {
+      .page-link:link,
+      .page-link:visited {
+        font-size: 18px;
+        color: #343a40;
+        text-decoration: none;
         cursor: pointer;
-        width: 32px;
-        height: 32px;
-        text-align: center;
-        line-height: 2;
+        width: 36px;
+        height: 36px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
 
-      .page-num--fill {
+      .page-link:hover,
+      .page-link:active,
+      .page-link.page-link--current {
         background-color: #087f5b;
         color: white;
-        border-radius: 50%;
       }
 
-      .page-num:hover {
-        background-color: #087f5b;
-        color: white;
-        border-radius: 50%;
+      .dots {
+        color: #868e96;
       }
     </style>
   </head>
@@ -106,14 +112,14 @@
           />
         </svg>
       </button>
-      <a class="page-num">1</a>
-      <a class="page-num">2</a>
-      <a class="page-num page-num--fill">3</a>
-      <a class="page-num">4</a>
-      <a class="page-num">5</a>
-      <a class="page-num">6</a>
+      <a href="#" class="page-link">1</a>
+      <a href="#" class="page-link">2</a>
+      <a href="#" class="page-link page-link--current">3</a>
+      <a href="#" class="page-link">4</a>
+      <a href="#" class="page-link">5</a>
+      <a href="#" class="page-link">6</a>
       <span class="dots">...</span>
-      <a class="page-num">23</a>
+      <a href="#" class="page-link">23</a>
       <button class="btn">
         <svg
           xmlns="http://www.w3.org/2000/svg"
